fixed spacing of links in sidebar

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -10,6 +10,11 @@ ul{
   list-style-type: none;
   margin-top: 20px;
   margin-bottom: 20px;
+  font-size: 20px;
+}
+
+ul li{
+  margin-bottom: 20px;
 }
 
 a{
